@@ -1,5 +1,7 @@
 2005-12-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/slur-engraver.cc (acknowledge_tuplet_number): new function.  
+
 	* flower/include/offset.hh (class Offset): new operator /=
 
 	* lily/tuplet-number.cc (print): new file, new interface.
